[gd_scene load_steps=3 format=3 uid="uid://bwua62ckacyc6"]

[ext_resource type="Script" path="res://editor/controls/message_bar/message_bar.gd" id="1_hmls6"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_trbp0"]
content_margin_left = 20.0
content_margin_right = 20.0
bg_color = Color(0.184314, 0.101961, 0.34902, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10

[node name="MessageBar" type="PanelContainer"]
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 50.0
offset_top = -22.0
offset_right = -50.0
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 3
size_flags_vertical = 8
theme_override_styles/panel = SubResource("StyleBoxFlat_trbp0")
script = ExtResource("1_hmls6")

[node name="HBoxContainerMessages" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="LabelMessages" type="RichTextLabel" parent="HBoxContainerMessages"]
layout_mode = 2
size_flags_horizontal = 3
bbcode_enabled = true
fit_content = true
scroll_active = false
autowrap_mode = 0

[node name="Distance" type="Label" parent="HBoxContainerMessages"]
layout_mode = 2

[node name="LabelFPS" type="Label" parent="HBoxContainerMessages"]
custom_minimum_size = Vector2(100, 2.08165e-12)
layout_mode = 2
size_flags_horizontal = 8
horizontal_alignment = 2
